# ChangeLog for net-misc/geekcredit
# Copyright 2000-2004 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/net-misc/geekcredit/ChangeLog,v 1.8 2004/06/26 15:29:16 zul Exp $

*geekcredit-0.019 (26 Jun 2004)

  26 Jun 2004; Chuck Short <zul@gentoo.org> geekcredit-0.019.ebuild:
  Version bump.

  26 Jun 2004; Chuck Short <zul@gentoo.org> geekcredit-0.016.ebuild:
  Marked stable for x86.

  09 Apr 2004; David Holm <dholm@gentoo.org> geekcredit-0.016.ebuild:
  Added to ~ppc.

*geekcredit-0.016 (09 Apr 2004)

  09 Apr 2004; Chuck Short <zul@gentoo.org> geekcredit-0.016.ebuild:
  Version bump, closes #46318.

  09 Apr 2004; Chuck Short <zul@gentoo.org> geekcredit-0.015.ebuild:
  Marked stable for x86.

  28 Mar 2004; Chuck Short <zul@gentoo.org> geekcredit-0.015.ebuild:
  Fix for python version detection, closes #46029.

*geekcredit-0.015 (28 Mar 2004)

  28 Mar 2004; Chuck Short <zul@gentoo.org> geekcredit-0.015.ebuild:
  Initial version, ebuild written by Lukasz Strzyowski < lucass@gentoo.pl >
  Ebuild modfified by me. Closes #45914
