@@ -1,7 +1,7 @@
-MD5 35f396c2d4e1b37fd32414ec517d1f15 geekcredit-0.016.ebuild 929
-MD5 f4b9b40c8fe2418668ab0627b41cf788 geekcredit-0.015.ebuild 929
-MD5 909c05128c83dff2e8cfdbc60671a8e0 ChangeLog 1079
-MD5 be839a6d9785d4e50beb128288c1aae4 geekcredit-0.019.ebuild 930
+MD5 9deb7629ab5f169e0464cba20e9e513f geekcredit-0.016.ebuild 920
+MD5 4d553262c7a6139e1961d16772575267 geekcredit-0.015.ebuild 914
+MD5 6a150b926c1aaa3611b694d303bc5221 ChangeLog 1268
+MD5 6806de0ea0736e702135383b2b39ac83 geekcredit-0.019.ebuild 921
 MD5 b09af4129fc6bc270d9d12396940a2d0 files/digest-geekcredit-0.015 56
 MD5 c0fb9e1d5c28f53fb7de46b2095ae577 files/digest-geekcredit-0.016 56
 MD5 3df3152b954075ec3f7e2363caef687d files/digest-geekcredit-0.019 56
